Apparently libapt-pkg returns null const char pointers when you try to call Section() on a package that lacks a section. :/ I naively thought that we might live in a world where all libraries would be like Qt and gracefully return an empty string on failure. We do not live in such a world.

BUG: 245177

svn path=/trunk/playground/libs/libqapt/; revision=1151987